--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -13,12 +13,13 @@
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 600;
-    color: black;
+    color: var(--dark-blue);
 }
 
 .companyText{
-    font-size: 14px;
+    font-size: 0.8em;
     width: fit-content;
+    color: var(--blue);
 }
 
 .footerLinks{
@@ -26,14 +27,19 @@
 }
 
 .links{
-    font-size: 14px;
+    font-size: 0.8em;
     margin: 0;
+    color: var(--blue);
 }
 
 .iconLinkFooter{
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+.iconLinkFooter span{
+    color: var(--dark-blue);
 }
 
 .footer{
@@ -64,6 +70,7 @@
 .innerFooterBottomLeft p{
     margin: 0;
     font-size: 15px;
+    color: var(--dark-blue);
 }
 
 .innerFooterBottom{
@@ -85,7 +92,7 @@
     .footerItem{
         width: 100%;
         height: 2.2em;
-        border: 1px solid var(--secondary-text);
+        border: 1px solid var(--blue);
         border-radius: 0.4em;
         overflow: hidden;
         align-items: center;
@@ -100,7 +107,7 @@
     
     .footerGoDown .footerGoDownIcon{
         display: block;
-        color: black;
+        color: var(--blue);
     }
 
     .footerGoDown{
