--- a/src/Components/OpenJobs/openJobs.css
+++ b/src/Components/OpenJobs/openJobs.css
@@ -78,8 +78,17 @@
 }
 
 .seeAllOpenings a{
-    font-weight: 600;
-    color: black;
+    font-weight: 500;
+    color: var(--blue);
+    text-decoration: underline;
+    font-style: italic;
+    text-decoration: underline;
+    text-transform: capitalize;
+    transition: color 0.3s ease-in-out;
+}
+
+.seeAllOpenings a:hover{
+    color: var(--dark-blue);
 }
 
 
@@ -92,6 +101,11 @@
     .openPositionsHeader h2{
         font-size: 1.3em;
         font-weight: 500;
+        margin-bottom: 0.7em;
+    }
+
+    .openPositionsSubheader{
+        width: 100%;
     }
 
     .openPositionsSubheader{
@@ -101,6 +115,8 @@
     .openPositionsSubheader p{
         text-align: center;
         font-size: 0.8em;
+        width: 86.7%;
+        margin: auto;
     }
 
     .openingsTabs{
@@ -108,8 +124,10 @@
     }
 
     .openPositionsTopContentContainer{
-        margin-bottom: 0;
+        margin: 0;
         height: 22%;
+        padding-top: 50px;
+        padding-bottom: 18px;
     }
 
     .nav-tabs-openJobs .nav-link{
