--- a/src/Components/FindJobs/findJobs.css
+++ b/src/Components/FindJobs/findJobs.css
@@ -160,7 +160,7 @@
   }
 
   .findJobsSearchArea {
-    background-color: lightgray;
+    background-color: white;
   }
 
   .findJobsSearchArea::placeholder {
