--- a/src/Pages/JobDetail/jobDetail.css
+++ b/src/Pages/JobDetail/jobDetail.css
@@ -104,14 +104,14 @@
 }
 
 .jobDetailsBottomCard{
-    border: 1px solid var(--light-light-gray);
+    border: 1px solid var(--blue);
     border-radius: 6px;
     padding: 35px 30px;
 }
 
 .cardTextContentTitle h4{
     font-size: 17px;
-    color: var(--secondary-text);
+    color: var(--blue);
     margin: 0;
     font-weight: 500;
 }
@@ -122,12 +122,15 @@
 
 
 .jobDetailsBottomCardMainTitle{
-    font-size: 21px;
+    font-size: 1.2em;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--dark-blue);
 }
 
 .cardTextContentTitle p{
     font-size: 16px;
-    color: var(--secondary-text);
+    color: var(--dark-blue);
     margin: 0;
     font-weight: 300;
     margin-top: 4px;
@@ -137,10 +140,11 @@
     margin: 50px 0;
 }
 
-.jobDetailsP{
-    color: var(--light-gray);
-    font-size: 16.4999px;
+.jobDetailsP, .jobDetailsBottomDescriptionPcontainer{
+    color: var(--blue);
+    font-size: 0.99em;
     letter-spacing: 0.025em;
+    font-weight: 300;
 }
 
 .jobDetailsBottomDescriptionP{
@@ -152,8 +156,9 @@
 }
 
 .jobDetailsBottomOthersH h1{
-    font-size: 26px;
-    font-weight: 900;
+    font-size: 1.2em;
+    font-weight: 600;
+    color: var(--dark-blue);
 }
 
 .jobDetailsBottomOthers{
