--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -1,15 +1,31 @@
+.heroHolder{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: #fff4ee;
+}
+
 .heroContainer {
   display: flex;
   width: 100%;
   padding: 40px;
-  padding-top: 60px;
-  position: relative;
-  /* background-color: #fbf7f4; */
+  padding-right: 0;
+  padding-top: 0px;
+  top: 0;
+  right: 0;
+  position: absolute;
+  height: 100%;
+  background-image: url("https://anna.1onestrong.com/wp-content/uploads/2023/09/Asset-09.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .heroLeft {
-  width: 50%;
+  width: 49%;
   z-index: 30;
+  padding-top: 60px;
+  height: 100%;
 }
 
 .heroRight {
@@ -20,37 +36,42 @@
 }
 
 .heroMainH h1 {
-  font-size: 2.1em;
+  font-size: 2em;
   letter-spacing: 0.003;
-  font-weight: 600;
-  width: 450px;
-  color: var(--dark-blue);
+  font-weight: 500;
+  width: 95%;
+  font-family: 'Trirong', serif;
+  color: var(--jungle-green);
 }
 
 .connectionsHeroContainer {
-  color: var(--blue);
+  color: green;
 }
 
 .heroMainP {
-  margin-top: 20px;
-  width: 400px;
+  margin: 15px 0;
+  font-family: sans-serif;
+  width: 95%;
+  font-weight: 300;
 }
 
 .heroMainP p {
   margin: 0;
   font-size: 0.88em;
-  color: var(--blue);
+  color: var(--jungle-green);
+  text-transform: uppercase;
 }
 
 .heroMainBtn {
-  background-color: var(--blue);
+  background-color: #b48e41;
   display: flex;
   align-items: center;
   gap: 10px;
   border-radius: 12px;
-  width: 27%;
+  width: 55%;
+  height: 3em;
   color: white;
-  padding: 8px 20px;
+  padding: 8px 30px;
   justify-content: space-between;
   margin: 40px 0;
   cursor: pointer;
@@ -67,19 +88,19 @@
   color: white;
   width: fit-content;
   padding: 0;
-  text-transform: capitalize;
-  font-size: 1em;
-  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  font-weight: 400;
+  letter-spacing: 0.05em;
 }
 
 .heroMainSecBtn {
   width: 70%;
   height: fit-content;
   padding: 30px;
-  background-color: #fbf7f4;
+  background-image: linear-gradient(to right top, #b48e41, #72803f, #3e6a47, #1e5148, #1c363a);
   border-radius: 6px;
-  margin-top: 30px;
-  border: 1px solid var(--blue);
+  margin-top: 70px;
 }
 
 .heroGlobe {
@@ -99,14 +120,16 @@
   font-size: 0.96em;
   line-height: 18px;
   margin-bottom: 0;
-  color: var(--dark-blue);
+  color: white;
 }
 
 .heroTalk h6 {
+  font-weight: 300;
   font-size: 0.8em;
-  color: var(--blue);
+  color: white;
   margin-top: 10px;
   margin-bottom: 20px;
+  color: rgb(255, 255, 255, 0.9);
 }
 
 .heroTalkBtnContainer {
@@ -116,12 +139,12 @@
 }
 
 .heroTalkBtnContainer a {
-  color: black;
+  color: white;
+  border-bottom: 1px solid white;
   text-decoration: none;
-  font-size: 0.76em;
-  padding: 3px 6px;
-  background-color: var(--light-blue);
-  border-radius: 6px;
+  font-size: 0.7em;
+  padding: 2px 6px;
+  background-color: transparent;
   cursor: pointer;
 }
 
@@ -272,125 +295,18 @@
 
 
 .grid-container {
-  width: 50%;
-  height: 85vh;
+  width: 80%;
+  height: 100%;
   z-index: 30;
-  display: grid;
-  grid-template-areas:
-      "grid-item1 grid-item1 grid-item2"
-      "grid-item3 grid-item4 grid-item4"
-      "grid-item5 grid-item6 grid-item7";
-  gap: 3px; /* Gap between grid items */
-  grid-template-rows: 170px  170px 1fr;
-  grid-template-columns: repeat(3, 1fr);
+  position: relative;
 }
 
-.grid-item1 {
-  grid-area: grid-item1;
-  border-radius: 30vh;
-  background: url("https://images.pexels.com/photos/7552568/pexels-photo-7552568.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  object-fit: fill;
-  border: none !important;
+.grid-container img{
+  height: 125.9%;
+  position: absolute;
+  top: -20%;
+  right: 5%;
 }
-
-.grid-item2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  grid-area: grid-item2;
-  border: none !important;
-  border-radius: 20vh;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: repeat;
-  background-image: url("data:image/svg+xml;utf8,%3Csvg viewBox=%220 0 1000 1000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%3E%3CclipPath id=%22a%22%3E%3Cpath fill=%22currentColor%22 d=%22M952.5 647Q905 794 780 885t-280 91q-155 0-280-91T47.5 647Q0 500 47.5 353T220 115q125-91 280-91t280 91q125 91 172.5 238t0 294Z%22%2F%3E%3C%2FclipPath%3E%3Cpattern id=%22b%22 patternUnits=%22userSpaceOnUse%22 width=%2232.5%22 height=%2232.5%22 viewBox=%220 0 100 100%22 fill=%22%23d6f7b5%22 patternTransform=%22rotate(45 0 0)%22%3E%3Cpath d=%22M0 0v100%22 stroke=%22%23d6f7b5%22 stroke-width=%2220%22%2F%3E%3C%2Fpattern%3E%3C%2Fdefs%3E%3Cg clip-path=%22url(%23a)%22%3E%3Cpath fill=%22url(%23b)%22 d=%22M952.5 647Q905 794 780 885t-280 91q-155 0-280-91T47.5 647Q0 500 47.5 353T220 115q125-91 280-91t280 91q125 91 172.5 238t0 294Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
-}
-
-.grid-item2 span {
-  background-color: white;
-  padding: 6px;
-  border-radius: 4px;
-}
-
-.grid-item3 {
-  grid-area: grid-item3;
-  border-top-left-radius: 20vh;
-  border-top-right-radius: 20vh;
-  border-bottom-left-radius: 20vh;
-  border-bottom-right-radius: 20vh;
-  background-color: orange;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none !important;
-}
-
-.grid-item3 img {
-  width: 4.5em;
-}
-
-.grid-item4 {
-  grid-area: grid-item4;
-  border-radius: 30vh;
-  background: url("https://images.pexels.com/photos/4491881/pexels-photo-4491881.jpeg?auto=compress&cs=tinysrgb&w=800");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  object-fit: fill;
-  border: none !important;
-}
-
-.grid-item5 {
-  grid-area: grid-item5;
-  border-radius: 50vh;
-  background: url("https://i.postimg.cc/fTbv67zw/pexels-photo-4890733-removebg-preview.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  object-fit: fill;
-  border: 1px solid var(--light-blue) !important;
-}
-
-.grid-item6 {
-  grid-area: grid-item6;
-  border-top-left-radius: 12vh;
-  border-top-right-radius: 12vh;
-  border-bottom-left-radius: 12vh;
-  border-bottom-right-radius: 12vh;
-  background: url("https://media.istockphoto.com/id/1061262324/vector/feminism-womens-platform-website-female-community-laptop-screen-digital-project-for-girls.jpg?s=612x612&w=0&k=20&c=nZSoFSd-9LaeS6UyYVyFhwqUflgZTyFE2Zw7XlWnv0g=");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  object-fit: fill;
-  border: none !important;
-}
-
-.grid-item7 {
-  grid-area: grid-item7;
-  border-top-left-radius: 30vh;
-  border-top-right-radius: 30vh;
-  border-bottom-left-radius: 30vh;
-  border-bottom-right-radius: 30vh;
-  background: url("https://media.istockphoto.com/id/1178965039/vector/gold-crown-vector-icon-isolated-king-queen-hat-golden-crown-emoji-emoticon-illustration.jpg?s=612x612&w=0&k=20&c=MCvDhiK67cKg1k8PH1ML587RGeBOjz51s-KO0XaYsVw=");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  object-fit: fill;
-  border: 1px solid orange !important;
-}
-
-
-/* Style for grid items */
-.grid-item {
-  border: 1px solid #ddd; /* Border for visual separation */
-  padding: 20px; /* Padding inside each grid item */
-  text-align: center; /* Center text */
-}
-
-/* Assign areas to specific grid items */
 
 
 @media screen and (min-width: 320px) and (max-width: 736px) {
@@ -417,7 +333,7 @@
 
   .heroMainSecBtn{
     width: 100%;
-    background-color: white;
+    background-color: #f5d5c2;
     border: 2px solid var(--blue);
   }
 
