--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -37,7 +37,7 @@
 }
 
 .logoCircle{
-    background-color: var(--light2-light-blue);
+    background-color: rgba(255, 255, 250);
     height: 2em;
     width: 2em;
     border-radius: 50%;
