--- a/src/Components/OpenJobs/openJobs.css
+++ b/src/Components/OpenJobs/openJobs.css
@@ -104,7 +104,7 @@
     }
 
     .openPositionsHeader h2{
-        font-size: 1.3em;
+        font-size: 1em;
         font-weight: 500;
         margin-bottom: 0.7em;
     }
@@ -119,9 +119,11 @@
 
     .openPositionsSubheader p{
         text-align: center;
-        font-size: 0.8em;
+        font-size: 0.6em;
+        font-family: sans-serif;
         width: 86.7%;
         margin: auto;
+        margin-top: 0.4em;
     }
 
     .openingsTabs{
@@ -138,5 +140,9 @@
     .nav-tabs-openJobs .nav-link{
         font-weight: 400;
         font-size: 0.8em;
+    }
+
+    .openPositionsBottomContent{
+        margin-top: 2em;
     }
   }
