--- a/src/Pages/JobDetail/jobDetail.css
+++ b/src/Pages/JobDetail/jobDetail.css
@@ -78,7 +78,7 @@
     height: fit-content;
     font-size: 16px;
     gap: 8px;
-    color: black;
+    color: var(--jungle-green);
 }
 
 .iconText{
@@ -195,7 +195,7 @@
 }
 
 .btnFB{
-    background-color: var(--blue);
+    background-image: linear-gradient(to right top, #004eff, #a520d6, #d600a6, #eb0076, #eb004c, #ef2a39, #f04424, #ed5a00, #f87f00, #ffa300, #ffc600, #ffe900);
     color: white;
     display: flex;
     gap: 5px;
@@ -282,7 +282,9 @@
 
     .detailsApplyBtn button{
         padding: 2% 5%;
+        width: 7em;
     }
+
     
     .jobDetailsBottom{
         width: 100%;
