--- a/src/Components/Video/video.css
+++ b/src/Components/Video/video.css
@@ -1,6 +1,6 @@
 .mainVideo{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     margin: 0;
@@ -8,6 +8,13 @@
 
 video{
     width: 40%;
-    height: 100vh;
+    height: 100%;
 
+}
+
+@media screen and (min-width: 320px) and (max-width: 736px) {
+    video{
+        width: 100%;
+        height: 100%;
+    }
 }
