--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -28,6 +28,8 @@
     --linkedin-bg: #0077b5;
     --pinterest-bg: #d93025;
     --loginLeft-bg: #f1f1f1;
+    --main-font: 'Trirong', serif;
+    --bold: #b48e41;
 }
 
 .btnScrollTop{
